--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
 /* Global Styles */
-@media only screen and (orientation: landscape) {
-  body {
-    background-color: lightblue;
+@media only screen and (min-width: 601px) {
+  div.example {
+    font-size: 80px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  div.example {
+    font-size: 30px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  div.example {
+    display: none;
   }
 }
 /* For mobile phones: */
