--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@
 }
 iframe
 {
+  margin-top: 8%;
   border: none;
-  padding-top: 50px;
   position: absolute;
    width:100%;
-   height:90%;
+   height:92%;
 }
 body{
   font-family: Arial, sans-serif;
@@ -35,13 +35,13 @@ body{
 
 /* Header Styles */
 header {
-  height:10%;
+  
+  height: 8%;
   flex-wrap: nowrap;
   background-color: #ff09ff;
   border-bottom: 1px solid #c18383;
   position:fixed;
   width: 100%;
-  max-height: 50px;
 
 }
 
