--- a/style.css
+++ b/style.css
@@ -6,11 +6,13 @@
 }
 iframe
 {
-  margin-top: 8%;
+  margin-top: 50px;
+  margin-bottom: 50px;
+
   border: none;
   position: absolute;
    width:100%;
-   height:92%;
+   height:90%;
 }
 body{
   font-family: Arial, sans-serif;
@@ -36,7 +38,8 @@ body{
 /* Header Styles */
 header {
   
-  height: 8%;
+  height:50px;
+
   flex-wrap: nowrap;
   background-color: #ff09ff;
   border-bottom: 1px solid #c18383;
